--- a/Ecommerce-Framework.Api/appsettings.Development.json
+++ b/Ecommerce-Framework.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=ecommerce-framework-development;Username=postgres;Password=loglab;CommandTimeout=120;"
+    "DefaultConnection": "Host=localhost;Database=ecommerce-framework-development;Username=postgres;Password=daniela;CommandTimeout=120;"
 
   }
 
